--- a/example_1/package.json
+++ b/example_1/package.json
@@ -3,8 +3,16 @@
   "version": "0.0.1",
   "description": "Node.js with Express 4 Tutorial",
   "main": "index.js",
+  "scripts": {
+    "concat-css": "cat css/* > output/all.css"
+  },
   "dependencies": {
     "body-parser": "^1.15.0",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2"
   }
 }
